[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
config = "0.11"
chrono = "0.4.42"
uuid = { version = "1", features = ["v4"] }


[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "chrono",
  "macros",
  "migrate"
]

[dev-dependencies]
reqwest = "0.11"

